--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&amp;display=swap&amp;subset=cyrillic" rel="stylesheet">
     <link type="text/css" href="css/hamburgers.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css">
+    <link rel="stylesheet" href="css/chartist.min.css">
     <link type="text/css" href="css/main.css" rel="stylesheet">
     <title>VIDIVIDS - Ролики для соц.сетей</title>
   </head>
@@ -39,36 +40,59 @@
           </div>
         </header>
         <main class="main">
+          <section class="main--section">
+            <div class="box">
+              <div class="col-50 d-flex col">
+                <h1 class="main--title">Мы наполним ваши соц.сети оригинальным видео-контентом!</h1>
+                <ul class="main--list">
+                  <li>• ролики для ютуб-канала</li>
+                  <li>• видео-креативы для рекламы в Facebook</li>
+                  <li>• сториз в Инстаграм</li>
+                  <li>• видео-обложки для группы ВК</li>
+                  <li>• промо-ролики в ленту</li>
+                </ul>
+                <p class="main--text">Оставьте заявку прямо сейчас, и мы бесплатно проконсультируем вас  по видео-маркетингу, разработаем эффективную стратегию продвижения и контентный план!!</p>
+                <button class="mainSendOrder" data-fancybox data-src="#order--form">Оставить заявку</button>
+              </div>
+              <div class="col-50 d-flex col main--video">
+                <div class="d-flex justify-center">
+                  <iframe src="https://www.youtube.com/embed/u0ZadsmJ31g" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <p class="main--text">Вы получите яркий и динамичный  ролик, который гарантированно привлечет внимание подписчиков и увеличит ваш личный доход!</p>
+              </div>
+            </div>
+          </section>
+          <div class="divider"></div>
           <div class="box col">
             <section class="our--works d-flex col">
               <h3 class="title">наши работы</h3>
               <div class="works--list d-flex flex-wrap space-between">
                 <div class="our--work__item">
-                  <iframe src="https://www.youtube.com/embed/Wtn9XQtLiJE" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <iframe src="https://www.youtube.com/embed/UbZTPhCJcxc" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="our--work__item">
-                  <iframe src="https://www.youtube.com/embed/Wtn9XQtLiJE" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <iframe src="https://www.youtube.com/embed/IngExBJPLUE" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="our--work__item">
-                  <iframe src="https://www.youtube.com/embed/Wtn9XQtLiJE" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <iframe src="https://www.youtube.com/embed/HdU7Fi1hMYU" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="our--work__item">
-                  <iframe src="https://www.youtube.com/embed/Wtn9XQtLiJE" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <iframe src="https://www.youtube.com/embed/fOh0JgB6pvE" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="our--work__item">
-                  <iframe src="https://www.youtube.com/embed/Wtn9XQtLiJE" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <iframe src="https://www.youtube.com/embed/CqYw38ZF2Ws" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="our--work__item">
-                  <iframe src="https://www.youtube.com/embed/Wtn9XQtLiJE" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <iframe src="https://www.youtube.com/embed/dQzoREM4xo0" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="our--work__item">
-                  <iframe src="https://www.youtube.com/embed/Wtn9XQtLiJE" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <iframe src="https://www.youtube.com/embed/ubonk4DW29Q" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="our--work__item">
-                  <iframe src="https://www.youtube.com/embed/Wtn9XQtLiJE" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <iframe src="https://www.youtube.com/embed/GwfeUG3UX8E" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="our--work__item">
-                  <iframe src="https://www.youtube.com/embed/Wtn9XQtLiJE" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <iframe src="https://www.youtube.com/embed/GwfeUG3UX8E" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
               </div>
             </section>
@@ -80,6 +104,21 @@
               </div>
               <div class="col-50 ai-center justify-center d-flex">
                 <button class="sendOrder" type="button">Оставить заявку</button>
+              </div>
+            </div>
+          </section>
+          <section class="result">
+            <div class="box col">
+              <h3 class="title">Видеоконтент – это ядерное топливо для SMM, которое приносит взрывной результат!!!</h3>
+              <div class="result--content d-flex">
+                <div class="col-50 d-flex col">
+                  <p class="result--text">По данным HubSpot, 55% пользователей просматривают видео в социальных сетях до конца. Это лучший показатель среди всех типов контента.</p>
+                  <p class="result--text">По статистике видеоплатформы Brightcove, короткие видео в соцсетях набирают на 1200% больше репостов, чем посты с текстом и картинками. </p>
+                </div>
+                <div class="col-50 d-flex col">
+                  <p class="result--text">Посмотрите, какие результаты по охвату получают компании, внедряя видео-контент:</p>
+                  <div class="ct-chart ct-perfect-fourth" style="height: 200px;"></div>
+                </div>
               </div>
             </div>
           </section>
@@ -167,9 +206,28 @@
         </footer>
       </div>
     </div>
+    <div style="display: none;" id="order--form">
+      <div class="order--modal">
+        <h3 class="order--modal__title">Оставить заявку</h3>
+        <form action="">
+          <div class="group">
+            <input type="text" name="name"><span class="bar"></span>
+            <label>Ваше имя</label>
+          </div>
+          <div class="group">
+            <input type="text" name="phone" id="phone"><span class="bar"></span>
+            <label>Ваш телефон</label>
+          </div>
+        </form>
+        <button class="sendBtn" type="submit">Отправить заявку</button>
+      </div>
+    </div>
     <script src="js/libs.min.js"></script>
     <script src="js/jquery-ui.min.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
+    <script src="js/jquery.mask.min.js"></script>
     <script src="js/hamburger.js"></script>
+    <script src="js/chartist.min.js"></script>
     <script src="js/common.js"></script>
   </body>
 </html>
